--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
         }
     </style>
     <link rel="stylesheet" href="{{page.root}}css/font-awesome.css">
-    <link rel="stylesheet" href="{{page.root}}css/coderay.css">
     <link rel="stylesheet" href="{{page.root}}css/asciidoctor.css">
+    <link rel="stylesheet" href="{{page.root}}css/rouge.css">
     <script src="{{page.root}}js/vendor/modernizr.js"></script>
     <script src="{{page.root}}js/toc.js"></script>
 </head>
